force-app/main/default/objects/Demands__c/Demands__c.object-meta.xml
<CustomObject>
    <label>Demands</label>
    <nameField>
        <displayFormat>DEM-{00000}</displayFormat>
        <label>Demand Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>