force-app/main/default/objects/Demands__c/fields/Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Amount__c</fullName>
    <description>Base amount excluding GST and TDS for this demand</description>
    <label>Base Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>