force-app/main/default/objects/Demands__c/fields/Cancellation_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Initiated</label>
    <type>Checkbox</type>
</CustomField>