force-app/main/default/objects/Demands__c/fields/Credit_Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Applied_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total credit note amount applied against this demand</description>
    <inlineHelpText>Amount reduced from this demand via credit notes</inlineHelpText>
    <label>Credit Applied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>