force-app/main/default/objects/Demands__c/fields/Demand_Reminder_Data__c.field-meta.xml
<CustomField>
    <fullName>Demand_Reminder_Data__c</fullName>
    <description>JSON storing N-level reminder tracking data. Each level has: daysAfterDue, sentDate, sent (boolean). Supports unlimited reminder levels beyond the 4 hardcoded fields.</description>
    <label>Demand Reminder Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>