force-app/main/default/objects/Demands__c/fields/Email_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_To__c</fullName>
    <label>Email Sent To</label>
    <type>Email</type>
</CustomField>