force-app/main/default/objects/Demands__c/fields/Net_Demand_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Demand_Amount__c</fullName>
    <formula>Demand_Amount__c +  Previous_Dues__c +  Interest_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Demand Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>