force-app/main/default/objects/Demands__c/fields/Number_of_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reminders__c</fullName>
    <label>Number of Reminders</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>