force-app/main/default/objects/Demands__c/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Schedule</label>
    <referenceTo>Payment_Schedule__c</referenceTo>
    <relationshipLabel>Demands</relationshipLabel>
    <relationshipName>Demands</relationshipName>
    <type>Lookup</type>
</CustomField>