force-app/main/default/objects/Demands__c/fields/Previous_Dues__c.field-meta.xml
<CustomField>
    <fullName>Previous_Dues__c</fullName>
    <label>Previous Dues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>