force-app/main/default/objects/Demands__c/fields/Reminder_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_1_Date__c</fullName>
    <description>Scheduled date for 1st reminder email.</description>
    <label>1st Reminder Date</label>
    <type>Date</type>
</CustomField>