force-app/main/default/objects/Demands__c/fields/Reminder_1_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_1_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether 1st reminder email has been sent.</description>
    <label>1st Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>