force-app/main/default/objects/Demands__c/fields/Reminder_1_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_1_Sent_Date__c</fullName>
    <description>Actual date when 1st reminder was sent.</description>
    <label>1st Reminder Sent Date</label>
    <type>DateTime</type>
</CustomField>