force-app/main/default/objects/Demands__c/fields/Reminder_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_2_Date__c</fullName>
    <description>Scheduled date for 2nd reminder email.</description>
    <label>2nd Reminder Date</label>
    <type>Date</type>
</CustomField>