force-app/main/default/objects/Demands__c/fields/Reminder_2_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_2_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether 2nd reminder email has been sent.</description>
    <label>2nd Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>