force-app/main/default/objects/Demands__c/fields/Reminder_2_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_2_Sent_Date__c</fullName>
    <description>Actual date when 2nd reminder was sent.</description>
    <label>2nd Reminder Sent Date</label>
    <type>DateTime</type>
</CustomField>