force-app/main/default/objects/Demands__c/fields/Reminder_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_3_Date__c</fullName>
    <description>Scheduled date for 3rd reminder email.</description>
    <label>3rd Reminder Date</label>
    <type>Date</type>
</CustomField>