force-app/main/default/objects/Demands__c/fields/Reminder_3_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_3_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether 3rd reminder email has been sent.</description>
    <label>3rd Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>