force-app/main/default/objects/Demands__c/fields/Reminder_3_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_3_Sent_Date__c</fullName>
    <description>Actual date when 3rd reminder was sent.</description>
    <label>3rd Reminder Sent Date</label>
    <type>DateTime</type>
</CustomField>