force-app/main/default/objects/Demands__c/fields/Reminders_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Reminders_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, all reminders and auto-unblocking are disabled for this demand. Automatically set to true when customer pays on time.</description>
    <inlineHelpText>Check to disable all reminders for this demand</inlineHelpText>
    <label>Reminders Disabled</label>
    <type>Checkbox</type>
</CustomField>