force-app/main/default/objects/Demands__c/fields/TDS_Amount__c.field-meta.xml
<CustomField>
    <fullName>TDS_Amount__c</fullName>
    <description>TDS amount for this demand</description>
    <label>TDS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>