force-app/main/default/objects/Demands__c/fields/Termination_Mail_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Mail_Date__c</fullName>
    <description>Scheduled date for termination mail with interest.</description>
    <label>Termination Mail Date</label>
    <type>Date</type>
</CustomField>