force-app/main/default/objects/Demands__c/fields/Termination_Mail_Sent__c.field-meta.xml
<CustomField>
    <fullName>Termination_Mail_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether termination mail has been sent.</description>
    <label>Termination Mail Sent</label>
    <type>Checkbox</type>
</CustomField>