force-app/main/default/objects/Demands__c/fields/Termination_Mail_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Mail_Sent_Date__c</fullName>
    <description>Actual date when termination mail was sent.</description>
    <label>Termination Mail Sent Date</label>
    <type>DateTime</type>
</CustomField>