force-app/main/default/objects/Demands__c/fields/Unit_Unblocked__c.field-meta.xml
<CustomField>
    <fullName>Unit_Unblocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the unit has been automatically unblocked due to non-payment.</description>
    <label>Unit Unblocked</label>
    <type>Checkbox</type>
</CustomField>