force-app/main/default/objects/Demands__c/fields/Unit_Unblocked_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Unblocked_Date__c</fullName>
    <description>Actual date when unit was unblocked.</description>
    <label>Unit Unblocked Date</label>
    <type>DateTime</type>
</CustomField>