force-app/main/default/objects/Demands__c/fields/Unit_Unblocking_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Unblocking_Date__c</fullName>
    <description>Scheduled date for automatic unit unblocking if payment not received.</description>
    <label>Unit Unblocking Date</label>
    <type>Date</type>
</CustomField>